# mlflow_getting_started

./: .gitignore  README.md  pyproject.toml  requirements.txt
getting_started/: _01_tracking_basics.py  _02_log_a_model.py  _03_log_the_final_model.py  _04_registry_via_python_api.py  _05_example_inc_prep.py  _06_run_example.py  _07_custom_pyfunc_model.py  load_models.ipynb  post_request_served_model.py  utils.py
src/getting_started/: _01_tracking_basics.py  _02_log_a_model.py  _07_custom_pyfunc_model.py  config.py
usage_of_pyfunc_models/: _05_example_inc_prep.py  _07_custom_pyfunc_model.py  _07_custom_python_model.py  pyspark_serving.ipynb
utils/: __init__.py
